force-app/main/default/objects/Sample1__c/Sample1__c.object-meta.xml
<CustomObject>
    <label>Sample1</label>
    <nameField>
        <label>Sample1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>