force-app/main/default/objects/Sample1__c/fields/sample_Age__c.field-meta.xml
<CustomField>
    <fullName>sample_Age__c</fullName>
    <label>sample Age</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>