force-app/main/default/objects/Sample1__c/fields/sampleName__c.field-meta.xml
<CustomField>
    <fullName>sampleName__c</fullName>
    <label>samplecode</label>
    <length>255</length>
    <type>Text</type>


   
    
</CustomField>