force-app/main/default/objects/Sample1__c/fields/srinu__c.field-meta.xml
<CustomField>
    <fullName>srinu__c</fullName>
    <label>sinu</label>
    <length>255</length>
    <type>Text</type>


   
    
</CustomField>